# baseball

./: .gitignore  Home.py  README.md  README.txt  csv_to_parquet.ipynb  pyproject.toml
csvs/: player_analysis.csv
exploration/chad/: explore.ipynb  statsforcast.ipynb
exploration/kristen/: app.py  multi_regression.py
exploration/madison/: SARIMA.ipynb  df_with_predictions.csv
exploration/madison/parquets/: batting-yearly-adv.parquet  final_predictions_df.parquet  final_predictions_sarima_df.parquet
exploration/wyatt/: explore.ipynb
models/: xgboost.json
pages/: 1_⏳_Time_Series.py  2_🚀_XGBoost.py  3_🏟️_Stadiums.py  5_⚾_Aggregate.py  5_❌_Multi_Regression.py  test_page.py  📈_Historical_Averages.py  📝_Project_Proposal.py
parquets/: allplayers.parquet  batting-yearly-adv.parquet  batting-yearly.parquet  discreps.parquet  ejections.parquet  parks.parquet
parquets/plays/: 1903.parquet  1905.parquet  1906.parquet  1907.parquet  1908.parquet  1909.parquet  1910.parquet  1911.parquet  1912.parquet  1913.parquet  1914.parquet  1915.parquet  1916.parquet  1917.parquet  1918.parquet  1919.parquet  1920.parquet  1921.parquet  1922.parquet  1923.parquet  1924.parquet  1925.parquet  1926.parquet  1927.parquet  1928.parquet  1929.parquet  1930.parquet  1931.parquet  1932.parquet  1933.parquet  1934.parquet  1935.parquet  1936.parquet  1937.parquet  1938.parquet  1939.parquet  1940.parquet  1941.parquet  1942.parquet  1943.parquet  (+81 more)
