[project]
name = "baseball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.22.0",
    "pybaseball>=2.2.7",
    "scikit-learn>=1.6.1",
    "statsforecast>=2.0.1",
    "statsmodels>=0.14.4",
    "streamlit>=1.42.1",
    "xgboost>=3.0.0",
]
